// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly on big screens 1`] = `
<fieldset
  className="FieldSet-root"
>
  <div
    className="Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter"
  >
    <legend
      className="Typography-root Typography-bodyCopyBold Typography-colorTextPrimary"
    >
      Sort By
    </legend>
    <span
      className="SelectField-root"
    >
      <select
        className="SelectField-select undefined"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="CREATED_AT_ASC"
      >
        <option
          value="CREATED_AT_DESC"
        >
          Newest
        </option>
        <option
          value="CREATED_AT_ASC"
        >
          Oldest
        </option>
        <option
          value="REPLIES_DESC"
        >
          Most Replies
        </option>
        <option
          value="RESPECT_DESC"
        >
          Most Reactions
        </option>
      </select>
      <span
        aria-hidden={true}
        className="SelectField-afterWrapper undefined"
      >
        <span
          aria-hidden="true"
          className="Icon-root Icon-sm"
        >
          expand_more
        </span>
      </span>
    </span>
  </div>
  <hr
    className="Divider-root"
  />
</fieldset>
`;

exports[`renders correctly on small screens 1`] = `
<fieldset
  className="FieldSet-root"
>
  <div
    className="Flex-root Flex-flex Flex-itemGutter Flex-justifyFlexEnd Flex-alignCenter"
  >
    <span
      className="SelectField-root"
    >
      <select
        className="SelectField-select SortMenu-mobileSelect"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="CREATED_AT_ASC"
      >
        <option
          value="CREATED_AT_DESC"
        >
          Newest
        </option>
        <option
          value="CREATED_AT_ASC"
        >
          Oldest
        </option>
        <option
          value="REPLIES_DESC"
        >
          Most Replies
        </option>
        <option
          value="RESPECT_DESC"
        >
          Most Reactions
        </option>
      </select>
      <span
        aria-hidden={true}
        className="SelectField-afterWrapper SortMenu-mobileAfterWrapper"
      >
        <span
          aria-hidden="true"
          className="Icon-root Icon-sm"
        >
          sort
        </span>
      </span>
    </span>
  </div>
  <hr
    className="Divider-root"
  />
</fieldset>
`;
